--- a/res/menu/preferences.xml
+++ b/res/menu/preferences.xml
@@ -1,5 +1,10 @@
-<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
-  <header android:icon="@drawable/ic_settings_display" android:title="Link to Dropbox" android:summary="Push/pull your recipes from a Dropbox account.">
-    <intent android:action="android.intent.action.VIEW" android:data="http://www.android.com" />
-  </header>
-</preference-headers>
+<?xml version="1.0" encoding="utf-8"?>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <PreferenceCategory android:title="Synchronization" android:key="synchronization">
+        <Preference 
+            android:key="dropbox"
+            android:title="Link to Dropbox"
+            android:summary="Push/pull your recipes from a Dropbox account."
+        />      
+    </PreferenceCategory>
+</PreferenceScreen>
