--- a/res/layout/recipe_view.xml
+++ b/res/layout/recipe_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scrollbarFadeDuration="500" android:scrollbarSize="12dip" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scrollbarFadeDuration="500" android:scrollbarSize="12dip">
   <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
       android:id="@+id/recipe"
       android:layout_width="fill_parent"
